--- a/AdminDB-TP1/nbproject/project.properties
+++ b/AdminDB-TP1/nbproject/project.properties
@@ -33,7 +33,8 @@ file.reference.ojdbc6.jar=lib/ojdbc6.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.ojdbc6.jar}
+    ${file.reference.ojdbc6.jar}:\
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
